# realsense_gazebo_plugin

./: CMakeLists.txt  README.md  package.xml
launch/: realsense_multiple_urdf.launch  realsense_urdf.launch
src/: RealSensePlugin.cpp  SavePointCloud.cpp  gazebo_ros_realsense.cpp
urdf/: rs200_simulation.xacro
