<?xml version="1.0"?>
<package format="2">
  <name>realsense_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>Intel RealSense R200 Gazebo plugin package</description>
  <maintainer email="sdikhale@gmail.com">Snehal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

 

<buildtool_depend>catkin</buildtool_depend>
<build_depend>pcl_conversions</build_depend>
<build_depend>pcl_ros</build_depend>

<build_depend>sensor_msgs</build_depend>
 <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>camera_info_manager</depend>
  <exec_depend>depth_image_proc</exec_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>libpcl-all-dev</build_depend>
<build_export_depend>pcl_conversions</build_export_depend>
<build_export_depend>pcl_ros</build_export_depend>

<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>cv_bridge</build_export_depend>
<exec_depend>pcl_conversions</exec_depend>
<exec_depend>pcl_ros</exec_depend>

<exec_depend>sensor_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>libpcl-all</exec_depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>
</package>
